--- a/app/page.module.css
+++ b/app/page.module.css
@@ -813,7 +813,7 @@
     align-items: center;
     gap: 2rem;
     color: #111;
-    margin-top: 3rem;
+    margin-top: 1.5rem;
     max-width: 900px;
     margin-left: auto;
     margin-right: auto;
@@ -847,6 +847,7 @@
     border-radius: 8px;
     padding: 1.5rem;
     margin-top: 2rem;
+    margin-bottom: 4rem;
     max-width: 900px;
     margin-left: auto;
     margin-right: auto;
