--- a/components/global/accreditations/accreditations.css
+++ b/components/global/accreditations/accreditations.css
@@ -41,6 +41,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    border: 1px solid #FF6B00;
 }
 
 .accreditation-item:hover {
