--- a/components/single-certificate/summary/summary.css
+++ b/components/single-certificate/summary/summary.css
@@ -6,6 +6,20 @@
     background: var(--ec-white);
 }
 
+.border-bottom {
+    position: relative;
+}
+
+.border-bottom:before {
+    content: "";
+    background: linear-gradient(90deg, var(--accent), #ff8c42, var(--accent));
+    height: 4px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
 .hero-grid {
     display: grid;
     grid-template-columns: 1fr 400px;
