World-Class Cybersecurity Courses , updated with images and new design -subtle more changes red

--- a/components/home/online-library-section.css
+++ b/components/home/online-library-section.css
@@ -68,8 +68,8 @@
 }
 
 .text-red {
-    color: #991b1b !important;
-    /* Darker red */
+    color: #ff1818 !important;
+    /* Bright red */
 }
 
 .section-subtitle {
